bug/minor: dropdown menu overlap on uploads images (#6681)
fix #6588

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1405,12 +1405,6 @@ the form-control fails to do that so we do the border ourselves */
   }
 }
 
-// raise above .viewer-ove
-.thumbnail > .dropdown {
-  position: relative;
-  z-index: 10;
-}
-
 /* icon overlay for uploaded file icons */
 .icon-overlay {
   display: block;
